Update Junit from 5.13.4 to 6.0.0 (#472)
Requires a minimum of Java 17 for compilation. The release target
remains Java 11.

This change also enabled Java compiler linting and fails on linting
errors. To address lint failures in the existing codebase, the bahviour
of the org.hyperledger.fabric.Logger constructor has changed to avoid a
potential 'this' escape. Any subclasses must now ensure that the parent
logger is set explicitly after construction by calling
setParent(Logger). No changes are required for code obtaining logger
instances using the static Logger.getLogger(String) method.

Signed-off-by: Mark S. Lewis <Mark.S.Lewis@outlook.com>